--- a/style.css
+++ b/style.css
@@ -58,6 +58,8 @@ body{
     list-style: none;
     padding: 5px;
     text-align: center;
+    font-size: 1.5em;
+    font-weight: bold;
 }
 
 #menu ul li a{
@@ -76,7 +78,7 @@ body{
     width:655px;
     height: 100%;
     padding-left:15px;
-    letter-spacing: 1;
+    letter-spacing: 1px;
     color: #57574c;
     border-left: 3px solid #7c7063;
 }
@@ -100,6 +102,8 @@ img {
 .top a{
     color: #4E4F3E;
     text-decoration: none;
+    font-size: 1.12em; 
+    font-weight: bold;
 }
 
 #table{
@@ -114,7 +118,12 @@ iframe{
     height: 80px;
     color: #7c7063;
     border-top: 3px solid #7c7063;
-}
-h5{
     text-align: center;
+    font-size:0.83em;
+    font-weight: bold;
+    padding-top: 1.8em;
+
+}
+table, th, td{
+    border: solid 1px;
 }
